--- a/drawing-board/package.json
+++ b/drawing-board/package.json
@@ -51,6 +51,9 @@
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
